CREATE TABLE employee (
    id NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR2(255) NOT NULL,
    surname VARCHAR2(255) NOT NULL,
    email VARCHAR2(255) NOT NULL
);

CREATE TABLE organizational_unit (
    id NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR2(255) NOT NULL,
    parent_id NUMBER(19, 0),
    CONSTRAINT fk_ou_parent FOREIGN KEY (parent_id) REFERENCES organizational_unit(id)
);

CREATE TABLE organizational_unit_owner (
    organizational_unit_id NUMBER(19, 0) NOT NULL,
    employee_id NUMBER(19, 0) NOT NULL,
    PRIMARY KEY (organizational_unit_id, employee_id),
    CONSTRAINT fk_ou_owner_ou FOREIGN KEY (organizational_unit_id) REFERENCES organizational_unit(id),
    CONSTRAINT fk_ou_owner_employee FOREIGN KEY (employee_id) REFERENCES employee(id)
);

CREATE TABLE organizational_unit_member (
    organizational_unit_id NUMBER(19, 0) NOT NULL,
    employee_id NUMBER(19, 0) NOT NULL,
    PRIMARY KEY (organizational_unit_id, employee_id),
    CONSTRAINT fk_ou_member_ou FOREIGN KEY (organizational_unit_id) REFERENCES organizational_unit(id),
    CONSTRAINT fk_ou_member_employee FOREIGN KEY (employee_id) REFERENCES employee(id)
);

CREATE TABLE budget (
    id NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    organizational_unit_id NUMBER(19, 0) NOT NULL,
    fiscal_year NUMBER(10, 0) NOT NULL,
    total_amount NUMBER(19, 4) NOT NULL,
    reserved_amount NUMBER(19, 4) NOT NULL,
    available_amount NUMBER(19, 4) NOT NULL,
    CONSTRAINT fk_budget_ou FOREIGN KEY (organizational_unit_id) REFERENCES organizational_unit(id)
);

CREATE TABLE training_type (
    id NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR2(255) NOT NULL,
    parent_type_id NUMBER(19, 0),
    CONSTRAINT fk_training_type_parent FOREIGN KEY (parent_type_id) REFERENCES training_type(id)
);

CREATE TABLE training (
    id NUMBER(19, 0) GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    requested_by_employee_id NUMBER(19, 0) NOT NULL,
    organizational_unit_id NUMBER(19, 0) NOT NULL,
    name VARCHAR2(255) NOT NULL,
    cost_amount NUMBER(19, 4) NOT NULL,
    cost_currency VARCHAR2(3) NOT NULL,
    hours NUMBER(10, 0) NOT NULL,
    purpose_type VARCHAR2(255) NOT NULL,
    purpose_other VARCHAR2(255),
    type_id NUMBER(19, 0) NOT NULL,
    status VARCHAR2(255) NOT NULL,
    manager_review_comments CLOB,
    manager_review_modality VARCHAR2(255),
    manager_review_start_date TIMESTAMP,
    manager_review_end_date TIMESTAMP,
    manager_review_external_provider_name VARCHAR2(255),
    manager_review_external_provider_email VARCHAR2(255),
    manager_review_external_provider_phone VARCHAR2(255),
    manager_review_reviewed_at TIMESTAMP,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    CONSTRAINT fk_training_requester FOREIGN KEY (requested_by_employee_id) REFERENCES employee(id),
    CONSTRAINT fk_training_ou FOREIGN KEY (organizational_unit_id) REFERENCES organizational_unit(id),
    CONSTRAINT fk_training_type FOREIGN KEY (type_id) REFERENCES training_type(id)
);

CREATE TABLE training_attendee (
    training_id NUMBER(19, 0) NOT NULL,
    employee_id NUMBER(19, 0) NOT NULL,
    PRIMARY KEY (training_id, employee_id),
    CONSTRAINT fk_ta_training FOREIGN KEY (training_id) REFERENCES training(id),
    CONSTRAINT fk_ta_employee FOREIGN KEY (employee_id) REFERENCES employee(id)
);
